--- a/OpenGL.vcxproj.filters
+++ b/OpenGL.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="texture_lecture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lecture_transformation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Text.txt">
